clazz.newInstance() -> clazz.getDeclaredConstructor().newInstance()